# extpar

./: .gitignore  .gitmodules  404.html  Dockerfile  Dockerfile.base  Dockerfile.extpar  Makefile  Makefile.in  Makefile.old  Objfiles  Options.arollaln  Options.daint  Options.debian.gcc  Options.keschln  Options.lce  Options.lema  Options.macports.gcc  Options.mistral.gcc  Options.mistral.intel  Options.mistral.nag  Options.o3.ethz.ch  Options.rcnl  Options.scorer  Options.scorer.ethz.ch  Options.tsaln  Options.ubuntu.gcc  Options.xce  README.md  ReleaseNotes.md  Srcfiles  Srcfiles.orig  aclocal.m4  configure  configure.ac  configure.balfrin.gcc  configure.daint.gcc  configure.debian.gcc  configure.docker.gcc  configure.levante.gcc  configure.mistral.gcc  (+14 more)
.github/workflows/: LaTex_build_and_release.yml  build-base-container.yml  build-container.yml  check_tex_to_pdf.yml  deploy-container-as-release-asset.yml  deploy_mkdocs.yml  format_external_links.yml  pytest.yaml  test-build.yml  upload_to_dockerhub.yml
SUMMARY/: index.html
assets/css/: extra.css
compile_run/: index.html
contrib/: install-extpar-swstack.sh
contrib/mpim/: README.md  cdo2monmean-sst-seaice-snow.py  cdo2monmean-t2m.py  dkrz-extpar.sh  dkrz-ifs2icon.sh  dkrz-monmean-sst-seaice-snow.sh  dkrz-monmean-t2m.sh  dkrz-prepare-sst-seaice.sh
dependencies/: index.html
development/: index.html
doc/: CHANGE_1_13_to_1_13_1  README  README.compile_run  README.compile_run.md  README.grib  README_INSTALL.txt  README_compil_run  compile_run.md  dependencies.md  development.md  misc.c2sm  testing.md
doc/user_and_implementation_manual/: README  user_and_implementation_manual.tex
docs/: SUMMARY.md  compile_run.md  dependencies.md  development.md  index.md  release_notes.md  testing.md  zonda.md
docs/scripts/: check_md_links.py
docs/user_manual/: SUMMARY.md  bibliography.bib  index.md  replace_markdown.sh  user_and_implementation_manual.tex  user_manual_01_overall_description.md  user_manual_02_software_modules.md  user_manual_03_fortran_modules.md  user_manual_04_python_modules.md  user_manual_06_namelist_input.md  (+1 more)
mkhelper/: .gitignore  _argparse.py  depgen.py  deplist.py  fortmodcmp.py
python/: WrapExtpar.py  _version.py  check_PEP8_standards.sh  extpar_ahf_to_buffer.py  extpar_alb_to_buffer.py  extpar_art_to_buffer.py  extpar_cdnc_to_buffer.py  extpar_cru_to_buffer.py  extpar_edgar_to_buffer.py  extpar_emiss_to_buffer.py  extpar_era_to_buffer.py  extpar_hwsdART_to_buffer.py  extpar_isa_to_buffer.py  extpar_ndvi_to_buffer.py  namelist.py  pep8_checker.sh
release_notes/: index.html
run/: extpar_cira_cosmo1.sh  extpar_cosmo_eu_v1_1.sh  extpar_cosmo_mch_v1_1.sh  extpar_kit_2400x2400_0.005.sh  extpar_mch_cosmo1.sh  extpar_mch_cosmo2.sh  extpar_mch_cosmo7.sh  orig_extpar_cosmo_mch_v1_1.sh
run_scripts/: dkrz-at-dwd-extpar.sh  dkrz_at_dwd_main_run.sh  dwd-monmean-sst4icon.sh  dwd-monmean-t2m4icon.sh  ecmwf-at-dwd-extpar.sh  ecmwf-monmean-sst4icon.sh  ecmwf-monmean-t2m4icon.sh  ecmwf_main_run.sh  extpar_cira_cosmo1.sh  extpar_cosmo_eu_v1_1.sh  extpar_debug.sh  extpar_eth_12km.globe.sh  extpar_eth_alp_2.2km_merit.sh  extpar_eth_euro-cordex_12km_globe.sh  extpar_kit_2400x2400_0.005.sh  extpar_mch.aster.sh  extpar_mch.globe.sh  extpar_mch_cosmo1.aster.sh  extpar_mch_cosmo1.globe.sh  extpar_mch_cosmo1.sh  extpar_mch_cosmo2.aster.sh  extpar_mch_cosmo2.globe.sh  extpar_mch_cosmo2.sh  extpar_mch_cosmo7.aster.sh  extpar_mch_cosmo7.globe.sh  extpar_mch_cosmo7.sh  extpar_mpim_icon.sh  extpar_teamx_cap.aster.sh  extpar_template.sh
scripts/: check_md_links.py  format_external_links.py
search/: search_index.json
src/: .#mo_ecci_lookup_tables.f90  CMakeLists.txt  FindGRIB_API.cmake  FindNETCDF.cmake  README_INSTALL.txt  doc_extpar.dox  extpar_ahf_to_buffer.f90  extpar_alb_to_buffer.f90  extpar_aot_to_buffer.f90  extpar_consistency_check.f90  extpar_consistency_check.f90.BACKUP.5434.f90  extpar_cru_to_buffer.f90  extpar_emiss_to_buffer.f90  extpar_flake_to_buffer.f90  extpar_globe_to_buffer.f90  extpar_hwsdART_to_buffer.f90  extpar_isa_to_buffer.f90  extpar_landuse_to_buffer.f90  extpar_landuse_to_buffer.f90.BACKUP.13308.f90  extpar_ndvi_to_buffer.f90  extpar_sgsl_to_buffer.f90  extpar_soil_to_buffer.f90  extpar_topo_to_buffer.f90  hack-allocates.sh  info_extpar.f90  info_extpar.f90.in  mainpage_extpar.dox  mo_additional_geometry.f90  mo_agg_ahf.f90  mo_agg_albedo.f90  mo_agg_aot.f90  mo_agg_cru.f90  mo_agg_ecci.f90  mo_agg_ecoclimap.f90  mo_agg_ecosg.f90  mo_agg_emiss.f90  mo_agg_flake.f90  mo_agg_glc2000.f90  mo_agg_glcc.f90  mo_agg_globcover.f90  (+122 more)
src_extpar_v1_1/: CMakeLists.txt  FindGRIB_API.cmake  doc_extpar.dox  extpar_consistency_check.f90  extpar_cru_to_buffer.f90  extpar_flake_to_buffer.f90  extpar_globe_to_buffer.f90  extpar_ndvi_to_buffer.f90  extpar_soil_to_buffer.f90  mo_agg_cru.f90  mo_agg_glcc.f90  mo_agg_globe.f90  mo_agg_ndvi.f90  mo_agg_soil.f90  mo_aot_output_nc.f90  mo_aot_target_fields.f90  mo_base_geometry.f90  mo_cosmo_grid.f90  mo_cru_output_nc.f90  mo_cru_target_fields.f90  mo_extpar_output_grib.f90  mo_extpar_output_nc.f90  mo_flake_data.f90  mo_flake_output_nc.f90  mo_glc2000_lookup_tables.f90  mo_glcc_data.f90  mo_globe_data.f90  mo_globe_routines.f90  mo_io_grib_api.f90  mo_landuse_output_nc.f90  mo_ndvi_output_nc.f90  mo_soil_tg_fields.f90  mo_target_grid_data.f90  mo_target_grid_routines.f90  mo_utilities_extpar.f90
src_python/: INPUT_ALB.py  INPUT_GRID.py  INPUT_NDVI.py  INPUT_TCLIM.py  alb_to_buffer.py  buffer.py  extpar_alb_to_buffer.py  extpar_cru_to_buffer.py  extpar_emiss_to_buffer.py  extpar_ndvi_to_buffer.py  fortran_namelist.py  grid_def.py  grid_spec.txt  io_utilities.py  metadata.py  namelist.py  namelist_template.py  shell_wrapper.py  utilities.py
templates/: INPUT_AOT  INPUT_CHECK  INPUT_FLAKE  INPUT_LU  INPUT_ORO  INPUT_OROSMOOTH  INPUT_RADTOPO  INPUT_SCALE_SEP  INPUT_SGSL  INPUT_SOIL  namelist  namelist.py  submit.daint.sh  submit.docker.sh  submit.levante.sh
testing/: index.html
trunk/: Makefile  Options.scorer.ethz.ch
user_manual/: index.html
zonda/: index.html
(+430 files in other folders)
