[metadata]
name = extpar
author = Jonas Jucker
author_email = jonas.jucker@c2sm.ethz.ch
description = Python bindings for extpar to prepare the external parameter data files that are used as input for the COSMO and the ICON model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C2SM-RCM/extpar
license = All rights reserved
# license-file = LICENSE
classifiers =
    License :: Other/Proprietary License
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    extpar
    ICON
    COSMO
    forcing
    simulation
project_urls =
    Source = https://github.com/C2SM-RCM/extpar
    Tracker = https://github.com/C2SM-RCM/extpar/issues

[options]
include_package_data = true
python_requires = >=3.7
packages =
    extpar
    extpar.lib
    extpar.data
    extpar.data.templates
    extpar.data.test
    extpar.data.test.testsuite
    extpar.data.test.testsuite.bin
    extpar.data.bin
package_dir =
    extpar = python/
    extpar.lib = python/lib/
    extpar.data = ./
    extpar.data.templates = templates/
    extpar.data.test.testsuite.bin = test/testsuite/bin/
    extpar.data.bin = bin/

install_requires =
    netCDF4
    numpy

[options.package_data]
extpar.data.templates =
    *
extpar.data =
    modules.env
extpar.data.test.testsuite.bin =
    runcontrol_functions.sh
extpar.data.bin =
    *

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = python/_version.py
versionfile_build = extpar/_version.py
tag_prefix = v
parentdir_prefix = extpar-

